<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <dynobjx.com.jrs.customviews.TextViewPlus
        android:layout_width="match_parent"
        android:background="@color/domestic_intl_btn_bg"
        android:layout_height="@dimen/dp_fifty"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_thirty"
        app:customTextViewFont="Roboto-Medium.ttf"
        android:paddingLeft="@dimen/dp_ten"
        android:gravity="center_vertical"
        android:text="@string/select_location"/>


    <dynobjx.com.jrs.customviews.TextViewPlus
        android:id="@+id/tvUseMyAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_fifty"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_twenty"
        app:customTextViewFont="Roboto-Light.ttf"
        android:paddingLeft="@dimen/dp_ten"
        android:gravity="center_vertical"
        android:text="@string/use_my_address"/>

    <dynobjx.com.jrs.customviews.TextViewPlus
        android:id="@+id/tvSelectOther"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_fifty"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_twenty"
        app:customTextViewFont="Roboto-Light.ttf"
        android:paddingLeft="@dimen/dp_ten"
        android:gravity="center_vertical"
        android:text="@string/user_other"/>



</LinearLayout>